[package]
name = "merkle_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
sha2 = "0.10.0"
base64 = "0.9.1"
hex = "0.4.3"
serde = {version = "1.0.137",features = ["derive"]}
serde_json = "1.0.81"
